# php-sdsearch

./: .gitattributes  .gitignore  .jscpd.json  .octocov.yml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  rustfmt.toml  sdsearch.stub.php
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
benches/: README.md  RESULTS.md  run.sh
docs/: API.md  FORMAT.md
sdsearch-core/: Cargo.toml
sdsearch-core/examples/: append_writer.rs  bench_engine.rs  bench_search_perf.rs  diff_read.rs  gen_synonyms.rs  optimize_bench.rs  perf_native.rs  stream_writer.rs
sdsearch-core/src/: analysis.rs  distance.rs  doc.rs  hybrid.rs  index.rs  lib.rs  mlt.rs  prf.rs  query.rs  score.rs  search.rs  segment.rs  serialize.rs  synonyms.rs
sdsearch-core/src/zsl/: bytes.rs  cfs.rs  deletes.rs  fields.rs  index.rs  mod.rs  norms.rs  postings.rs  runner.rs  segment.rs  segments.rs  stored.rs  terms.rs
sdsearch-core/src/zsl/writer/: cfs.rs  deletes.rs  durability.rs  fnm.rs  index_writer.rs  invert.rs  lock.rs  merge.rs  mod.rs  norms.rs  postings.rs  segments.rs  stored.rs  terms.rs
sdsearch-core/tests/: analyzer_parity.rs  persistence_roundtrip.rs  zsl_boolean_parity.rs  zsl_interprocess_lock.rs  zsl_merge_memory_bound.rs  zsl_multiseg_parity.rs  zsl_optimize_crash_safety.rs  zsl_query_parity.rs  zsl_query_parity_kb.rs  zsl_reader_during_write.rs  zsl_unclean_shutdown.rs
sdsearch-core/tests/fixtures/: analyzer_parity.json  zsl_expected.json  zsl_expected_kb.json  zsl_expected_multiseg.json
sdsearch-core/tests/fixtures/zsl_index/: _0.cfs  segments_2
sdsearch-core/tests/fixtures/zsl_index_kb/: _2.cfs  segments_6
sdsearch-core/tests/fixtures/zsl_index_multiseg/: _0.cfs  _1.cfs  _2.cfs  segments_5
sdsearch-php/: Cargo.toml
sdsearch-php/src/: lib.rs
tests/: smoke.php
tools/: bench_compare.php  bench_report.php  build_kb_fixture.php  diff_writer.php  diff_writer_ffi.php  gen_zsl_fixture.php  gen_zsl_multiseg_fixture.php  golden_writer.php  perf_writer.php  perf_zsl.php  writer_ffi_smoke.php  writer_ffi_trylock_smoke.php  zsl_bootstrap.php
tools/corpus/: kb_corpus.json
