[package]
name = "sdsearch-php"
version = "0.1.2"
edition = "2021"
description = "Native byte-faithful reader/writer of the Zend Search Lucene index format"
license = "Apache-2.0"
repository = "https://github.com/InvGate/php-sdsearch"
authors = ["InvGate"]
keywords = ["lucene", "search", "zend", "php", "index"]
categories = ["text-processing"]

[lints]
workspace = true

[lib]
name = "sdsearch"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.15"
sdsearch-core = { path = "../sdsearch-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
